--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,9 @@
     "typescript-eslint": "^7.13.1"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "envalid": "^8.0.0",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.3"
   }
 }
