--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
