--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/http-errors": "^2.0.4",
     "@types/morgan": "^1.9.9",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
@@ -27,10 +29,13 @@
     "typescript-eslint": "^7.13.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "http-errors": "^2.0.0",
     "mongoose": "^8.4.3",
     "morgan": "^1.10.0"
